# clangir

./: '  .aider.conf.yml  .gitignore  CIROps.td  Gemfile  README.md  TODO.md  _config.yml  foo.cir  index.md  patch.diff  update-docs.sh
clang-tools-extra/clang-tidy/cir/: CIRTidyMain.cpp  CMakeLists.txt  Lifetime.cpp
clang-tools-extra/clang-tidy/cir-tidy/: CIRASTConsumer.cpp  CIRASTConsumer.h  CIRTidy.cpp  CIRTidy.h  CMakeLists.txt
clang-tools-extra/clang-tidy/cir-tidy/tool/: CIRTidyMain.cpp  CMakeLists.txt
clang/lib/CIR/: ABIInfo.h  Address.h  CIRBuilder.cpp  CIRGenCall.cpp  CIRGenCall.h  CIRGenClass.cpp  CIRGenCstEmitter.h  CIRGenDecl.cpp  CIRGenExpr.cpp  CIRGenExprAgg.cpp  CIRGenExprCXX.cpp  CIRGenExprCst.cpp  CIRGenExprScalar.cpp  CIRGenFunction.cpp  CIRGenFunction.h  CIRGenFunctionInfo.h  CIRGenModule.cpp  CIRGenModule.h  CIRGenStmt.cpp  CIRGenTypes.cpp  CIRGenValue.h  CIRGenerator.cpp  CMakeLists.txt  LowerToLLVM.cpp  TargetInfo.cpp
clang/lib/CIR/CodeGen/: ABIInfo.h  Address.h  CIRAsm.cpp  CIRDataLayout.h  CIRGenAtomic.cpp  CIRGenBuilder.cpp  CIRGenBuilder.h  CIRGenBuiltin.cpp  CIRGenBuiltinAArch64.cpp  CIRGenBuiltinAMDGPU.cpp  CIRGenBuiltinNVPTX.cpp  CIRGenBuiltinX86.cpp  CIRGenCUDANV.cpp  CIRGenCUDARuntime.cpp  CIRGenCUDARuntime.h  CIRGenCXX.cpp  CIRGenCXXABI.cpp  CIRGenCXXABI.h  CIRGenCall.cpp  CIRGenCall.h  CIRGenClass.cpp  CIRGenCleanup.cpp  CIRGenCleanup.h  CIRGenCoroutine.cpp  CIRGenCstEmitter.h  CIRGenDecl.cpp  CIRGenDeclCXX.cpp  CIRGenException.cpp  CIRGenExpr.cpp  CIRGenExpr.h  CIRGenExprAgg.cpp  CIRGenExprCXX.cpp  CIRGenExprComplex.cpp  CIRGenExprConst.cpp  CIRGenExprCst.cpp  CIRGenExprScalar.cpp  CIRGenFunction.cpp  CIRGenFunction.h  CIRGenFunctionInfo.h  CIRGenItaniumCXXABI.cpp  (+31 more)
clang/lib/CIR/Dialect/IR/: CIRAttrs.cpp  CIRDataLayout.cpp  CIRDialect.cpp  CIRIntrinsics.cpp  CIRMemorySlot.cpp  CIRTypes.cpp  CMakeLists.txt  MissingFeatures.h  UnimplementedFeatureGuarding.h
clang/lib/CIR/Dialect/Transforms/: ABILowering.cpp  CIRCanonicalize.cpp  CIRFlattening.cpp  CIRSimplify.cpp  CMakeLists.txt  CallConvLowering.cpp  DropAST.cpp  FlattenCFG.cpp  GotoSolver.cpp  HoistAllocas.cpp  IdiomRecognizer.cpp  LibOpt.cpp  LifetimeCheck.cpp  LoweringPrepare.cpp  LoweringPrepareAArch64CXXABI.cpp  LoweringPrepareCXXABI.h  LoweringPrepareItaniumCXXABI.cpp  LoweringPrepareItaniumCXXABI.h  MLIRLoweringPrepare.cpp  MergeCleanups.cpp  RegionInlining.cpp  SCFPrepare.cpp  StdHelpers.cpp  StdHelpers.h  StructuredCFG.cpp
clang/lib/CIR/Dialect/Transforms/TargetLowering/: ABIInfo.cpp  ABIInfo.h  ABIInfoImpl.cpp  ABIInfoImpl.h  CIRCXXABI.cpp  CIRCXXABI.h  CIRContext.cpp  CIRContext.h  CIRLowerContext.cpp  CIRLowerContext.h  CIRQueries.cpp  CIRQueries.h  CIRRecordLayout.cpp  CIRRecordLayout.h  CIRToCIRArgMapping.h  CMakeLists.txt  DataLayout.cpp  DataLayout.h  ItaniumCXXABI.cpp  LowerCall.cpp  LowerCall.h  LowerFunction.cpp  LowerFunction.h  LowerFunctionInfo.h  LowerModule.cpp  LowerModule.h  LowerModuleRegistry.cpp  LowerTypes.cpp  LowerTypes.h  MissingFeature.h  RecordLayoutBuilder.cpp  TargetInfo.cpp  TargetInfo.h  TargetLoweringInfo.h
clang/lib/CIR/Dialect/Transforms/TargetLowering/Targets/: AArch64.cpp  AMDGPU.cpp  NVPTX.cpp  SPIR.cpp  (+5 more)
clang/lib/CIR/FrontendAction/: CIRGenAction.cpp  CMakeLists.txt
clang/lib/CIR/Interfaces/: ASTAttrInterfaces.cpp  CIRLoopOpInterface.cpp  CIROpInterfaces.cpp  CIRTypeInterfaces.cpp  CMakeLists.txt  FPTypeInterface.cpp  LoopOpInterface.cpp
clang/lib/CIR/Lowering/: CMakeLists.txt  LoweringHelpers.cpp
clang/lib/CIR/Lowering/DirectToLLVM/: CMakeLists.txt  LowerAttrToLLVMIR.cpp  LowerTBAAToLLVM.cpp  LowerToLLVM.cpp  LowerToLLVM.h  LowerToLLVMIR.cpp  LoweringHelpers.h
clang/lib/CIR/Lowering/ThroughMLIR/: CMakeLists.txt  LowerCIRLoopToSCF.cpp  LowerCIRToMLIR.cpp  LowerMLIRToLLVM.cpp  LowerToMLIRHelpers.h  MLIRCoreDialectsLoweringPrepare.cpp  MLIRLoweringPrepare.cpp
clang/tools/cir-lsp-server/: CMakeLists.txt
(+1186 files in other folders)
